--- a/quadragesimo site/css/estilo.css
+++ b/quadragesimo site/css/estilo.css
@@ -16,10 +16,81 @@ body{
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    color:rgb(220, 20, 20);
+    color:rgb(255, 255, 255);
     background-color:rgb(71, 75, 78) 
 }
 header{
     margin-top: 20px;
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1rem 9%;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+
 }
+.logo
+{
+    font-size: 3rem;
+    color: #3d5ca6;
+    font-weight: 800;
+    cursor: pointer;
+    transition: 0.5s ease;
+
+}
+.logo:hover{
+    transform: scale(1.7);
+}
+nav a{
+    font-size: 1.8rem;
+    color: white;
+    margin-left: 4rem;
+    font-weight: 500;
+    transition: 0.3s ease;
+
+}
+nav a:hover,
+nav a.active{
+    color: #3d5ca6;
+    border-bottom: 3px solid #3d5ca6;
+}
+section{
+    min-height: 100vh;
+    padding: 5rem 9%;
+}
+.home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8ram;
+    background-color:rgb(71, 75, 78);
+}
+.home .home-content h1{
+    font-size: 6rem;
+    font-weight: 700;
+    line-height: 1.3;
+
+}
+span
+{
+    color: #3d5ca6;
+}
+.home-content h3{
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+.home-contentp{
+    font-size: 1.6rem;
+}
+.home-img{
+    position: relative;
+    width: 32vh;
+}
+
+
+
