--- a/quadragesimo site/css/estilo.css
+++ b/quadragesimo site/css/estilo.css
@@ -43,7 +43,7 @@ header{
 
 }
 .logo:hover{
-    transform: scale(1.7);
+    transform: scale(1.1);
 }
 nav a{
     font-size: 1.8rem;
@@ -87,10 +87,7 @@ span
 .home-contentp{
     font-size: 1.6rem;
 }
-.home-img{
-    position: relative;
-    width: 32vh;
-}
+
 .home-img img{
     position: relative;
     width: 64vh;
@@ -99,7 +96,26 @@ span
 
 }
 .home-img img:hover{
-    transform: scale(1.7);
+    transform: scale(1.1);
 }
-
+.social-icons a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50% ;
+    background-color: transparent;
+    margin: 0 1rem;
+    transition: 0.3s ease;
+    color: #3d5ca6;
+    font-size: 2rem;
+    border: 0.2rem solid #3d5ca6;
+}
+p{
+    font-size: 2rem;
+    margin-top: 1%;
+    margin-bottom: 1rem;
+    color: #fff;
+}
 
