--- a/quadragesimo site/css/estilo.css
+++ b/quadragesimo site/css/estilo.css
@@ -139,32 +139,18 @@ p{
     color: #3d5ca6;
     transform: scale(1.1);
 }
-.typig-text{
-    font-size: 3rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-    color: #3d5ca6;
-}
-.typing-text span{
-    position: relative;
-}
-.typing-text span::before{
-    content: '';
-    color: #3d5ca6;
-    animation: words 20s infinite;
-}
-.typig-text span::after{
-    content: '';
-    background-color: transparent;
-    position: absolute;
-    width: calc(100% + 0.5rem);
-    height: 100%;
-    border-radius: 0.5rem solid #3d5ca6;
-    animation: cursor 0.8s infinite;
-
-}
 @keyframes cursor{
     to{
         border-left: 3px solid #3d5ca6;
     }
 }
+.typing-text span {
+    border-right: 3px solid #3d5ca6;
+    padding-right: 5px;
+    animation: blink 0.7s steps(1) infinite;
+}
+
+@keyframes blink {
+    0%, 100% { border-color: #3d5ca6; }
+    50% { border-color: transparent; }
+} 
